--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,8 +1,14 @@
 .cards{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap:20px;
-    
+    grid-gap:20px; 
+}
+@media screen and (max-width:720px){
+    .cards{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap:20px; 
+    }
 }
 .HomeBody{
     background-color:rgb(139, 125, 232);
